--- a/Generative AI with SAP AI Core/orchestration.ipynb
+++ b/Generative AI with SAP AI Core/orchestration.ipynb
@@ -5,89 +5,12 @@
    "id": "b85169f4",
    "metadata": {},
    "source": [
-    "[*Prompt LLMs in the generative AI hub in SAP AI Core & Launchpad*](https://developers.sap.com/tutorials/ai-core-generative-ai.html#cd7f285b-9a2e-4218-9bbe-b334efaca7e9)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "11a7dfa5",
-   "metadata": {},
-   "source": [
-    "## Prompt LLMs in the generative AI hub in SAP AI Core & Launchpad\n",
-    "Understand the principles of prompt engineering and learn to create effective prompts for AI models like ChatGPT. Prompt engineering is crucial for obtaining desired outputs from AI models. It helps in guiding the model's response in a particular direction.."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2db7d2fc",
-   "metadata": {},
-   "source": [
-    "### Checking for foundation-models scenario"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7547394f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'AICORE_CONFIG_FILENAME' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m CONFIG_PATH_DIR = \u001b[33m'\u001b[39m\u001b[33menv/bin/config\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      5\u001b[39m CONFIG_PATH_DIR = \u001b[33m'\u001b[39m\u001b[33menv/lib/python3.13/site-packages/config\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;66;03m# change .aicore-config.json into this folder\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m t=os.path.join(ROOT_PATH_DIR, CONFIG_PATH_DIR, \u001b[43mAICORE_CONFIG_FILENAME\u001b[49m)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(t)\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os.path.join(ROOT_PATH_DIR, CONFIG_PATH_DIR, AICORE_CONFIG_FILENAME), \u001b[33m'\u001b[39m\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m config_file:\n",
-      "\u001b[31mNameError\u001b[39m: name 'AICORE_CONFIG_FILENAME' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "ROOT_PATH_DIR = os.path.dirname(os.getcwd())\n",
-    "CONFIG_PATH_DIR = 'env/bin/config'\n",
-    "CONFIG_PATH_DIR = 'env/lib/python3.13/site-packages/config' # change .aicore-config.json into this folder\n",
-    "t=os.path.join(ROOT_PATH_DIR, CONFIG_PATH_DIR, AICORE_CONFIG_FILENAME)\n",
-    "\n",
-    "print(t)\n",
-    "\n",
-    "with open(os.path.join(ROOT_PATH_DIR, CONFIG_PATH_DIR, AICORE_CONFIG_FILENAME), 'r') as config_file:\n",
-    "    config_data = json.load(config_file)\n",
-    "\n",
-    "os.environ[\"AICORE_AUTH_URL\"]=config_data[\"url\"]+\"/oauth/token\"\n",
-    "os.environ[\"AICORE_CLIENT_ID\"]=config_data[\"clientid\"]\n",
-    "os.environ[\"AICORE_CLIENT_SECRET\"]=config_data[\"clientsecret\"]\n",
-    "os.environ[\"AICORE_BASE_URL\"]=config_data[\"serviceurls\"][\"AI_API_URL\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0053fd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from config import init_env\n",
-    "from config import variables\n",
-    "import importlib\n",
-    "variables = importlib.reload(variables)\n",
-    "MODEL_NAME = 'gpt-4o'\n",
-    "init_env.set_environment_variables()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "22260dc0",
-   "metadata": {},
-   "source": [
     "[*Using Multimodal inputs with GPT4o for Image Recognition on SAP AI Core*](https://developers.sap.com/tutorials/ai-core-gpt4o-consumption.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dce34e02",
+   "id": "11a7dfa5",
    "metadata": {},
    "source": [
     "## Using Multimodal inputs with GPT4o for Image Recognition on SAP AI Core\n",
@@ -96,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ec630573",
    "metadata": {},
    "outputs": [
@@ -157,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d06c3c8c",
    "metadata": {},
    "outputs": [],
@@ -175,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "ccfc9586",
    "metadata": {},
    "outputs": [],
@@ -208,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "85d7b729",
    "metadata": {},
    "outputs": [],
@@ -232,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "10608845",
    "metadata": {},
    "outputs": [
@@ -240,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A blue water bottle and black headphones are placed next to a power outlet on a table.\n"
+      "A blue bottle, black headphones, and a power outlet with an on switch are placed on a white table against a maroon and beige partition.\n"
      ]
     }
    ],
@@ -275,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "4c0184e8",
    "metadata": {},
    "outputs": [],
@@ -293,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "dd3f1da5",
    "metadata": {},
    "outputs": [],
@@ -325,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "c021820f",
    "metadata": {},
    "outputs": [],
@@ -349,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "ba60e354",
    "metadata": {},
    "outputs": [
@@ -357,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The color of the bottle is blue, and there is 1 bottle in the image.\n"
+      "The bottle color is blue, and there is one bottle in the image.\n"
      ]
     }
    ],
@@ -392,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "65f7cdf5",
    "metadata": {},
    "outputs": [],
@@ -411,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "0d4866bd",
    "metadata": {},
    "outputs": [],
@@ -444,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "31b4ed03",
    "metadata": {},
    "outputs": [],
@@ -468,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "966db2e6",
    "metadata": {},
    "outputs": [
@@ -510,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "350484f4",
    "metadata": {},
    "outputs": [],
@@ -529,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "8ad66a91",
    "metadata": {},
    "outputs": [],
@@ -562,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "a478ec53",
    "metadata": {},
    "outputs": [],
@@ -586,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "5d06f96f",
    "metadata": {},
    "outputs": [
@@ -674,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "ae2cb6af",
    "metadata": {},
    "outputs": [],
@@ -707,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "b5dc0496",
    "metadata": {},
    "outputs": [],
@@ -731,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "855848d2",
    "metadata": {},
    "outputs": [
