--- a/Basic/basic.ipynb
+++ b/Basic/basic.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9d001999",
    "metadata": {},
    "outputs": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "05d76f83",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "The 2023 Nobel Prize in Chemistry was awarded to Moungi G. Bawendi, Louis E. Brus, and Alexei I. Ekimov for their discovery and synthesis of quantum dots. Quantum dots are tiny semiconductor particles or nanocrystals with unique optical and electronic properties due to their size, which is at the nanometer scale. These properties have significant applications in fields such as medical imaging and display technologies."
+       "As of my last update, the 2023 Nobel Prize in Chemistry was awarded to Moungi Bawendi, Louis Brus, and Alexei Ekimov for the discovery and development of quantum dots. Quantum dots are tiny particles that have unique properties due to their size and are used in various applications, including electronics and medical imaging."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -376,53 +376,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "f04aba31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "Here are the two JSON files based on the provided banana bread recipe image:\n",
+       "Here are the ingredients and instructions extracted and organized in two different JSON files:\n",
        "\n",
-       "**ingredients.json:**\n",
+       "**Ingredients JSON:**\n",
+       "\n",
        "```json\n",
        "{\n",
-       "  \"dry_ingredients\": {\n",
-       "    \"all_purpose_flour\": \"260 g\",\n",
-       "    \"sugar\": \"200 g\",\n",
-       "    \"baking_soda\": \"6 g\",\n",
-       "    \"salt\": \"3 g\"\n",
-       "  },\n",
-       "  \"wet_ingredients\": {\n",
-       "    \"banana\": \"225 g\",\n",
-       "    \"eggs\": \"2 large\",\n",
-       "    \"vegetable_oil\": \"100 g\",\n",
-       "    \"whole_milk\": \"55 g\",\n",
-       "    \"vanilla_extract\": \"5 g\"\n",
-       "  },\n",
-       "  \"toppings\": {\n",
-       "    \"chocolate_chips\": \"100 g\",\n",
-       "    \"walnuts\": \"100 g (optional)\"\n",
+       "  \"ingredients\": {\n",
+       "    \"dry_ingredients\": [\n",
+       "      \"260 g All-purpose Flour\",\n",
+       "      \"200 g Sugar\",\n",
+       "      \"6 g Baking Soda\",\n",
+       "      \"3 g Salt\"\n",
+       "    ],\n",
+       "    \"wet_ingredients\": [\n",
+       "      \"225 g Banana\",\n",
+       "      \"2 Large Eggs\",\n",
+       "      \"100 g Vegetable Oil\",\n",
+       "      \"55 g Whole Milk\",\n",
+       "      \"5 g Vanilla Extract\"\n",
+       "    ],\n",
+       "    \"toppings\": [\n",
+       "      \"100 g Chocolate Chips\",\n",
+       "      \"100 g Walnuts (Optional)\"\n",
+       "    ]\n",
        "  }\n",
        "}\n",
        "```\n",
        "\n",
-       "**instructions.json:**\n",
+       "**Instructions JSON:**\n",
+       "\n",
        "```json\n",
        "{\n",
-       "  \"directions\": [\n",
-       "    \"Preheat oven to 180°C.\",\n",
-       "    \"Mash banana in a bowl.\",\n",
-       "    \"Combine banana and other wet ingredients together in the same bowl.\",\n",
-       "    \"Mix all dry ingredients together in a separate bowl.\",\n",
-       "    \"Use a whisk to combine dry mixture into wet mixture until smooth.\",\n",
-       "    \"Pour mixture into a greased/buttered loaf pan.\",\n",
-       "    \"Place the pan into preheated oven on the middle rack and bake for about 60 minutes or until a toothpick comes out clean.\",\n",
+       "  \"instructions\": [\n",
+       "    \"Preheat oven to 180 °C\",\n",
+       "    \"Mash banana in a bowl\",\n",
+       "    \"Combine banana and other wet ingredients together in the same bowl\",\n",
+       "    \"Mix all dry ingredients together in a separate bowl\",\n",
+       "    \"Use a whisk to combine dry mixture into wet mixture until smooth\",\n",
+       "    \"Pour mixture into a greased/buttered loaf pan\",\n",
+       "    \"Place the pan into preheated oven on the middle rack and bake for about 60 minutes or until a toothpick comes out clean\",\n",
        "    \"Enjoy!\"\n",
        "  ]\n",
        "}\n",
-       "```"
+       "```\n",
+       "\n",
+       "These JSON files organize the information in a structured manner, making it easy to use programmatically."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
