--- a/Generative AI with SAP AI Core/foundation-model.ipynb
+++ b/Generative AI with SAP AI Core/foundation-model.ipynb
@@ -1180,53 +1180,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "17d80b14",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deployment found:\n",
-      "id: d07b68722141e03d\n",
-      "createdAt: 2025-09-29T09:32:49Z\n",
-      "modifiedAt: 2025-11-13T03:39:08Z\n",
-      "status: RUNNING\n",
-      "details: {'resources': {'backendDetails': {'model': {'name': 'gpt-4o', 'version': 'latest'}}, 'backend_details': {'model': {'name': 'gpt-4o', 'version': 'latest'}}}, 'scaling': {'backendDetails': {}, 'backend_details': {}}}\n",
-      "scenarioId: foundation-models\n",
-      "configurationId: ce1241ca-ae7b-43c5-9d80-e65535e60afa\n",
-      "latestRunningConfigurationId: ce1241ca-ae7b-43c5-9d80-e65535e60afa\n",
-      "lastOperation: CREATE\n",
-      "targetStatus: RUNNING\n",
-      "submissionTime: 2025-09-29T09:35:53Z\n",
-      "startTime: 2025-09-29T09:38:07Z\n",
-      "configurationName: cortex-1\n",
-      "deploymentUrl: https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2/inference/deployments/d07b68722141e03d\n"
-     ]
-    }
-   ],
-   "source": [
-    "# find the deployment ID of the foundation-model configuration\n",
-    "\n",
-    "search_id = \"ce1241ca-ae7b-43c5-9d80-e65535e60afa\"  # The cofiguration ID of gpt-4o\n",
-    "\n",
-    "found = None\n",
-    "for deployment in data[\"resources\"]:\n",
-    "    if deployment.get(\"configurationId\") == search_id:\n",
-    "        found = deployment\n",
-    "        break\n",
-    "\n",
-    "if found:\n",
-    "    print(\"Deployment found:\")\n",
-    "    for key, value in found.items():\n",
-    "        print(f\"{key}: {value}\")\n",
-    "else:\n",
-    "    print(\"Deployment not found.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 64,
    "id": "296d34b7",
    "metadata": {},
@@ -1938,6 +1891,128 @@
     " \n",
     "* How to create a table and store embeddings in HANA Vector Store.\n",
     "* How to use the embeddings in Retrieval Augmented Generation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7efae350",
+   "metadata": {},
+   "source": [
+    "[*Tutorial03 - Using foundational models on SAP AI Core*](https://developers.sap.com/tutorials/ai-core-consumption-llm.html)\n",
+    "## Using foundational models on SAP AI Core\n",
+    "In this tutorial we are going to learn on how to consume LLM on AI core deployed on SAP AI core.\n",
+    "* How to inference foundational models on AI core"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "060e9c03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load Library\n",
+    "from ai_core_sdk.ai_core_v2_client import AICoreV2Client\n",
+    "ai_core_client = AICoreV2Client(\n",
+    "    base_url = \"https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com\" + \"/v2\", # The present SAP AI Core API version is 2\n",
+    "    auth_url=  \"https://rb-btphub-taf-d.authentication.eu10.hana.ondemand.com\" + \"/oauth/token\", # Suffix to add\n",
+    "    client_id = \"sb-68b507a6-6c60-4dfe-823a-9b7d4ba2f409!b550689|aicore!b540\",\n",
+    "    resource_group = \"default\",\n",
+    "    client_secret = \"1298f815-2d07-4e28-9dc6-5ff4cfc82c00$VB5IA6pyBIR6ca6kY-c_lJ98d1oGIIXCTpThiA0WE08=\"\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "071cde21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ID: dac8d37a6fd75edc\n",
+      "Name: anthropic claude-3.5 sonnet_ssconfig\n",
+      "Model: anthropic--claude-3.5-sonnet\n",
+      "Version: latest\n",
+      "Status: RUNNING\n",
+      "Created At: 2025-11-13 07:35:47+00:00\n",
+      "Deployment URL: https://api.ai.prod.eu-central-1.aws.ml.hana.ondemand.com/v2/inference/deployments/dac8d37a6fd75edc\n",
+      "----------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the model name you want to search for\n",
+    "target_model = \"anthropic--claude-3.5-sonnet\"  # Change this to your desired model name\n",
+    "\n",
+    "response = ai_core_client.deployment.query()\n",
+    "\n",
+    "for deployment in response.resources:\n",
+    "    backend_details = deployment.details.get('resources', {}).get('backend_details', {})\n",
+    "    model_info = backend_details.get('model')\n",
+    "\n",
+    "    # Check if 'model' exists and matches the target model name\n",
+    "    if model_info and model_info.get('name') == target_model:\n",
+    "        print(f\"\"\"\n",
+    "ID: {deployment.id}\n",
+    "Name: {deployment.configuration_name}\n",
+    "Model: {model_info.get('name')}\n",
+    "Version: {model_info.get('version')}\n",
+    "Status: {deployment.status.value}\n",
+    "Created At: {deployment.created_at}\n",
+    "Deployment URL: {deployment.deployment_url}\n",
+    "----------------------------------------\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a85aba0",
+   "metadata": {},
+   "source": [
+    "### anthropic--claude-3.5-sonnet\n",
+    "In this example we will see how to consume this generative AI model using Generative AI Hub SDK.\n",
+    "Before you use these models, please ensure that the deployment has already been created. You can create the deployment either through generative-ai-hub-sdk or AI Launchpad.\n",
+    "For inferencing the corresponding model through Generative AI Hub SDK, execute the following python command -"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b8628ded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A 'hello world' program demonstrates the basic syntax of a programming language by outputting a simple greeting.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gen_ai_hub.proxy.native.amazon.clients import Session\n",
+    "bedrock = Session().client(model_name=\"anthropic--claude-3.5-sonnet\")\n",
+    "conversation = [\n",
+    "    {\n",
+    "        \"role\": \"user\",\n",
+    "        \"content\": [\n",
+    "            {\n",
+    "                \"text\": \"Describe the purpose of a 'hello world' program in one line.\"\n",
+    "            }\n",
+    "        ],\n",
+    "    }\n",
+    "]\n",
+    "response = bedrock.converse(\n",
+    "    messages=conversation,\n",
+    "    inferenceConfig={\"maxTokens\": 512, \"temperature\": 0.5, \"topP\": 0.9},\n",
+    ")\n",
+    "print(response['output']['message']['content'][0]['text'])\n"
    ]
   },
   {
